@@ -122,6 +122,19 @@ sub _paragraph_tag
     return "para";
 }
 
+sub _handle_elem_of_name_a
+{
+    my ($self, $elem) = @_;
+    $self->_output_tag_with_childs(
+        {
+            start => ["ulink", "url" => $elem->lookup_attr("href")],
+            elem => $elem,
+        }
+    );
+
+    return;
+}
+
 sub _handle_elem_of_name_section
 {
     my ($self, $elem) = @_;
