@@ -1,5 +1,8 @@
 Revision history for XML-Grammar-Fiction.
 
+    * Now handling the a element only in XML::Grammar::Screenplay - it
+    does not exist in ::Fiction.
+
 0.1.5       Mon Apr  4 23:08:18 IDT 2011
 
     * Add the tag-release.pl script to tag a release using svn.berlios.de.
